--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
           <li class="menu-active"><a href="/">TRANG CHỦ</a></li>
           <li><a href="{{ site.url }}/gioi-thieu/">GIỚI THIỆU</a></li>
           <li><a href="{{ site.url }}/dich-vu/">DỊCH VỤ</a></li>
-          <li><a href="{{ site.url }}/san-pham/">Products</a></li>
-          <li class="menu-has-children"><a href="">Blog</a>
+          <li><a href="{{ site.url }}/san-pham/">SẢN PHẨM</a></li>
+          <li class="menu-has-children"><a href="">TIN TỨC</a>
           <ul>
             <li><a href="{{ site.url }}/assets/blog-home.html">BLOG</a></li>
             <li><a href="{{ site.url }}/assets/blog-single.html">Blog Single</a></li>
