--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,10 +1,1 @@
-<script async="async" src="{{ site.url }}/assets/js/vendor/jquery-2.2.4.min.js"></script>
-<script async="async" src="{{ site.url }}/assets/js/main.js"></script>	
-<script async="async" src="{{ site.url }}/assets/js/superfish.min.js"></script>	
-<script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script-->
-<script async="async" src="{{ site.url }}/assets/js/jquery.magnific-popup.min.js"></script>	
-<script async="async" src="{{ site.url }}/assets/js/owl.carousel.min.js"></script>			
-<script async="async" src="{{ site.url }}/assets/js/waypoints.min.js"></script>
-<script async="async" src="{{ site.url }}/assets/js/jquery.counterup.min.js"></script>					
-<script async="async" src="{{ site.url }}/assets/js/parallax.min.js"></script>	
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
