--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,74 +1,130 @@
-<div class="sidebar-widgets-wrap">
-
-
-	<div class="widget clearfix">
-		{% include ad_sidebar_top.html %}
-	</div>
-
-	
-	<!-- Top Search
-	============================================= -->
-	
-	<form action="tim-kiem" method="get">
-		<div class="input-group">
-			<span class="input-group-btn"><button class="btn btn-success" type="submit"><i class="icon-line-search"></i></button></span>
-			<input type="text" name="q" class="form-control" value="" placeholder="Tìm kiếm..">
-		</div>
-	</form>
-	<!-- #top-search end -->
-
-	<div class="widget clearfix">
-
-		<h4>BÀI VIẾT MỚI NHẤT</h4>
-		<div id="post-list-footer">
-
-			{% for post in site.categories.tin-tuc limit:5 %}
-
-			<div class="spost clearfix">
-				<div class="entry-c">
-					<div class="entry-image">
-            		   <a href="{{ site.url }}{{ post.url }}"><img class="image_fade" src="{{ post.image }}" alt="{{ post.title }}"></a>
-            		</div>
-					<div class="entry-title">
-						<h5><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h5>
-					</div>
-				</div>
-			</div>
-			
-			{% endfor %}
-
-
-		</div>
-
-	</div>
-
-
-	<div id="w-video" class="widget clearfix">
-
-		<h4 class="highlight-me">VIDEO DỰ ÁN</h4>
-		<iframe width="250" height="145" src="{{ page.video }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-	</div>
-
-	<div id="subscriber" class="widget subscribe-widget clearfix">
-		<h4 class="highlight-me">ĐĂNG KÍ NHẬN KHUYẾN MÃI</h4>
-		<h5>Đăng kí nhận tin tức khuyến mãi mới nhất từ <span>{{ site.name }}</span></h5>
-		<form action="subscribe.php" role="form" class="notopmargin nobottommargin">
-			<div class="input-group divcenter">
-				<input type="text" class="form-control" placeholder="Địa chỉ Email" required="">
-				<span class="input-group-btn">
-					<button class="btn btn-success" type="submit"><i class="icon-email2"></i></button>
-				</span>
-			</div>
-		</form>
-	</div>
-
-	<div class="widget clearfix">
-
-		{% include ad_sidebar_bottom.html %}
-
-	</div>
-
-	
-
+<div class="col-lg-4 sidebar">
+    <div class="single-widget search-widget">
+        <form class="example" action="#" style="margin:auto;max-width:300px">
+            <input type="text" placeholder="Search Posts" name="search2">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
+    <div class="single-widget protfolio-widget">
+        <img src="{{ site.url }}/assets/img/blog/user2.jpg" alt="">
+        <a href="#"><h4>Adele Gonzalez</h4></a>
+        <p>
+            MCSE boot camps have its supporters and
+            its detractors. Some people do not understand why you should have to spend money
+            on boot camp when you can get.
+        </p>
+        <ul>
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="#"><i class="fa fa-behance"></i></a></li>
+        </ul>
+    </div>
+    <div class="single-widget category-widget">
+        <h4 class="title">Post Categories</h4>
+        <ul>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Techlology</h6> <span>37</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Lifestyle</h6> <span>24</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Fashion</h6> <span>59</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Art</h6> <span>29</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Food</h6> <span>15</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Architecture</h6> <span>09</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Adventure</h6> <span>44</span></a></li>
+        </ul>
+    </div>
+    <div class="single-widget recent-posts-widget">
+        <h4 class="title">Recent Posts</h4>
+        <div class="blog-list ">
+            <div class="single-recent-post d-flex flex-row">
+                <div class="recent-thumb">
+                    <img class="img-fluid" src="{{ site.url }}/assets/img/blog/r1.jpg" alt="">
+                </div>
+                <div class="recent-details">
+                    <a href="blog-single.html">
+                        <h4>
+                        Home Audio Recording
+                        For Everyone
+                        </h4>
+                    </a>
+                    <p>
+                        02 hours ago
+                    </p>
+                </div>
+            </div>
+            <div class="single-recent-post d-flex flex-row">
+                <div class="recent-thumb">
+                    <img class="img-fluid" src="{{ site.url }}/assets/img/blog/r2.jpg" alt="">
+                </div>
+                <div class="recent-details">
+                    <a href="blog-single.html">
+                        <h4>
+                        Home Audio Recording
+                        For Everyone
+                        </h4>
+                    </a>
+                    <p>
+                        02 hours ago
+                    </p>
+                </div>
+            </div>
+            <div class="single-recent-post d-flex flex-row">
+                <div class="recent-thumb">
+                    <img class="img-fluid" src="{{ site.url }}/assets/img/blog/r3.jpg" alt="">
+                </div>
+                <div class="recent-details">
+                    <a href="blog-single.html">
+                        <h4>
+                        Home Audio Recording
+                        For Everyone
+                        </h4>
+                    </a>
+                    <p>
+                        02 hours ago
+                    </p>
+                </div>
+            </div>
+            <div class="single-recent-post d-flex flex-row">
+                <div class="recent-thumb">
+                    <img class="img-fluid" src="{{ site.url }}/assets/img/blog/r4.jpg" alt="">
+                </div>
+                <div class="recent-details">
+                    <a href="blog-single.html">
+                        <h4>
+                        Home Audio Recording
+                        For Everyone
+                        </h4>
+                    </a>
+                    <p>
+                        02 hours ago
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="single-widget category-widget">
+        <h4 class="title">Post Archive</h4>
+        <ul>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Dec '17</h6> <span>37</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Nov '17</h6> <span>24</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Oct '17</h6> <span>59</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Sep '17</h6> <span>29</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Aug '17</h6> <span>15</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Jul '17</h6> <span>09</span></a></li>
+            <li><a href="#" class="justify-content-between align-items-center d-flex"><h6>Jun '17</h6> <span>44</span></a></li>
+        </ul>
+    </div>
+    <div class="single-widget tags-widget">
+        <h4 class="title">Tag Clouds</h4>
+        <ul>
+            <li><a href="#">Lifestyle</a></li>
+            <li><a href="#">Art</a></li>
+            <li><a href="#">Adventure</a></li>
+            <li><a href="#">Food</a></li>
+            <li><a href="#">Techlology</a></li>
+            <li><a href="#">Fashion</a></li>
+            <li><a href="#">Architecture</a></li>
+            <li><a href="#">Food</a></li>
+            <li><a href="#">Technology</a></li>
+        </ul>
+    </div>
 </div>
