--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,27 +10,27 @@
           <li><a href="{{ site.url }}/gioi-thieu/">GIỚI THIỆU</a></li>
           <li><a href="{{ site.url }}/dich-vu/">DỊCH VỤ</a></li>
           <li><a href="{{ site.url }}/san-pham/">SẢN PHẨM</a></li>
-          <li class="menu-has-children"><a href="">TIN TỨC</a>
-          <ul>
+          <li class="menu-has-children"><a href="{{ site.url }}/blog/">MY BLOG</a>
+            <!--ul>
             <li><a href="{{ site.url }}/blog/">BLOG</a></li>
             <li><a href="{{ site.url }}/post/">Blog Single</a></li>
-          </ul>
-        </li>
-        <li><a href="{{ site.url }}/lien-he/">LIÊN HỆ</a></li>
-        <li class="menu-has-children"><a href="">Dropdown</a>
-        <ul>
-          <li><a href="{{ site.url }}/elements/">Elements</a></li>
-          <li><a href="{{ site.url }}/du-an/">Product Details</a></li>
-          <li class="menu-has-children"><a href="">Level 2</a>
+          </ul-->
+          </li>
+          <li><a href="{{ site.url }}/lien-he/">LIÊN HỆ</a></li>
+          <!--li class="menu-has-children"><a href="">Dropdown</a>
           <ul>
-            <li><a href="#">Item 1</a></li>
-            <li><a href="#">Item 2</a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-  </nav><!-- #nav-menu-container -->
+            <li><a href="{{ site.url }}/elements/">Elements</a></li>
+            <li><a href="{{ site.url }}/du-an/">Product Details</a></li>
+            <li class="menu-has-children"><a href="">Level 2</a>
+            <ul>
+              <li><a href="#">Item 1</a></li>
+              <li><a href="#">Item 2</a></li>
+            </ul>
+          </li-->
+        </ul>
+      </li>
+    </ul>
+</nav><!-- #nav-menu-container -->
 </div>
 </div>
 </header><!-- #header -->
