--- a/_layouts/car/post.html
+++ b/_layouts/car/post.html
@@ -65,7 +65,7 @@
                         </div>
 
                         <div class="col-md-3">
-                            <div class="sidebar sticky-sidebar-wrap clearfix">
+                            <div class="sticky-sidebar-wrap clearfix">
                                 <div class="sticky-sidebar">
                                     <div class="widget clearfix">
                                         <div class="card mt-4">
